Nginx conf: redirect from www and ip to mikola.by

--- a/nginx/configs/conf.d/default.conf
+++ b/nginx/configs/conf.d/default.conf
@@ -4,7 +4,13 @@ upstream django {
 
 server {
     listen          80;
-    server_name     .mikola.by;
+    server_name     www.mikola.by;
+    return 301 http://mikola.by$request_uri;
+}
+
+server {
+    listen          80;
+    server_name     mikola.by;
 
     client_max_body_size    4G;
 
