--- a/src/requirements/requirements.txt
+++ b/src/requirements/requirements.txt
@@ -1,7 +1,6 @@
 Django>=1.10,<1.11
 wagtail>=1.6,<1.7
-psycopg2==2.6.1
-Pillow==2.6.1
+psycopg2>=2.6,<2.7
+Pillow>=3.3,<3.4
 Jinja2==2.8
-uwsgi==2.0.11.2
-Pygments==2.0.2
+uwsgi==2.0.13.1
