Nginx: Allow requests from localhost

--- a/nginx/configs/conf.d/default.conf
+++ b/nginx/configs/conf.d/default.conf
@@ -10,7 +10,7 @@ server {
 
 server {
     listen          80;
-    server_name     mikola.by;
+    server_name     mikola.by 127.0.0.1;
 
     client_max_body_size    4G;
 
