Don't need linting and formating for JS, for now

--- a/src/package.json
+++ b/src/package.json
@@ -24,8 +24,6 @@
   "dependencies": {},
   "scripts": {
     "build": "gulp build",
-    "start": "gulp watch",
-    "lint:js": "./node_modules/.bin/jscs ./src || true",
-    "format:js": "./node_modules/.bin/jscs ./src -x"
+    "watch": "gulp watch"
   }
 }
