TODOs for nginx

--- a/nginx/configs/conf.d/default.conf
+++ b/nginx/configs/conf.d/default.conf
@@ -15,10 +15,12 @@ server {
     client_max_body_size    4G;
 
     location /static {
+        # TODO: Would be great to render this path from env vars
         alias   /var/blog/static/;
     }
 
     location /media {
+        # TODO: Would be great to render this path from env vars
         alias   /var/blog/media/;
     }
 
