We need to run build on the run time
Because we don't have volume on the image build time

--- a/Dockerfile-frontend_build
+++ b/Dockerfile-frontend_build
@@ -8,6 +8,6 @@ RUN npm install
 ENV CFG_STATIC_ROOT=/var/blog/static
 
 ADD src/ .
-RUN npm run build
 
-CMD [ "true" ]
+
+CMD [ "npm", "run", "build" ]
