Move CFG_STATIC_ROOT and CFG_MEDIA_ROOT into env file
We don't need these env vars at the image build time

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,8 @@ services:
       - blog_data
     volumes_from:
       - blog_data
-#    command: "ls -la"
+    env_file:
+      - ./blog.env
 
   # For static and media files
   blog_data:
