--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,25 @@ services:
       # You need to have this file to be able to work with docker
       - ~/.docker/secrets/blog.env
 
+  # Runs migrations for the application.
+  blog_update:
+    build: .
+    links:
+      - postgres:postgres
+    depends_on:
+      - postgres
+      - blog_data
+    volumes_from:
+      - blog_data
+    env_file:
+      - ./blog.env
+      # You need to have this file to be able to work with docker
+      - ~/.docker/secrets/blog.env
+    # Restart until postgres can process our requests.
+    # Should help on the first run and on restarts.
+    restart: on-failure:10
+    command: "bash scripts/update-script.sh"
+
   # Builds front-end for the app.
   blog_frontend_build:
     build:
