--- a/blog.prod.env
+++ b/blog.prod.env
@@ -1,3 +1,4 @@
 DJANGO_SETTINGS_MODULE=blog.base.settings.prod
 CFG_STATIC_ROOT=/var/blog/static
 CFG_MEDIA_ROOT=/var/blog/media
+CFG_WAGTAILSEARCH_BACKENDS_DEFAULT_URLS=http://elasticsearch:9200
