--- a/docker-compose.common.yml
+++ b/docker-compose.common.yml
@@ -36,3 +36,8 @@ services:
     volumes:
       - /var/lib/postgresql
     command: "true"
+
+
+  # Elasticsearch
+  blog_elasticsearch:
+    image: elasticsearch:1.7
