--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,12 @@ services:
     env_file:
       # You need to have this file to be able to work with docker
       - ~/.docker/secrets/blog.prod.env
-    volumes_from:
-      - blog_app_data
+    volumes:
+      - "blog_app_data:/var/blog"
     links:
       - blog_postgres:postgres
     depends_on:
       - blog_postgres
-      - blog_app_data
 
 
   # Runs migrations for the app. Production only, at the moment.
@@ -29,30 +28,20 @@ services:
     env_file:
       # You need to have this file to be able to work with docker
       - ~/.docker/secrets/blog.prod.env
-    volumes_from:
-      - blog_app_data
+    volumes:
+      - "blog_app_data:/var/blog"
     links:
       - blog_postgres:postgres
     depends_on:
       - blog_postgres
-      - blog_app_data
 
 
   blog_app_frontend:
     extends:
       file: docker-compose.common.yml
       service: blog_app_frontend
-    volumes_from:
-      - blog_app_data
-    depends_on:
-      - blog_app
-      - blog_app_data
-
-
-  blog_app_data:
-    extends:
-      file: docker-compose.common.yml
-      service: blog_app_data
+    volumes:
+      - "blog_app_data:/var/blog"
 
 
   # Nginx. Serves static and media files from the application's data container.
@@ -61,25 +50,20 @@ services:
     build: ./nginx
     ports:
       - "80:80"
-    volumes_from:
-      - blog_app_data
+    volumes:
+      - "blog_app_data:/var/blog"
     links:
       - blog_app
-    depends_on:
-      - blog_app_data
 
 
   blog_postgres:
     extends:
       file: docker-compose.common.yml
       service: blog_postgres
-    volumes_from:
-      - blog_postgres_data
-    depends_on:
-      - blog_postgres_data
+    volumes:
+      - "blog_postgres_data:/var/lib/postgresql"
 
 
-  blog_postgres_data:
-    extends:
-      file: docker-compose.common.yml
-      service: blog_postgres_data
+volumes:
+  blog_app_data: {}
+  blog_postgres_data: {}
