--- a/src/requirements/requirements.txt
+++ b/src/requirements/requirements.txt
@@ -1,5 +1,5 @@
-Django>=1.10.5,<1.11
-wagtail>=1.9rc1,<1.10
+Django>=1.10.6,<1.11
+wagtail>=1.9,<1.10
 psycopg2>=2.6,<2.7
 Pillow>=3.3,<3.4
 Jinja2==2.8
