--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,11 +26,7 @@ services:
       - "/app/node_modules"
     depends_on:
       - blog_app
-    command:
-      - cd /app
-      - npm install
-      - npm run watch
-
+    command: bash -c "cd /app && npm install && npm run watch"
 
   # DB container
   blog_postgres:
