Serve static and media with uwsgi

--- a/blog.dev.env
+++ b/blog.dev.env
@@ -1,2 +1,4 @@
 DJANGO_SETTINGS_MODULE=blog.base.settings.dev
+CFG_STATIC_ROOT=/app/static
+CFG_MEDIA_ROOT=/app/media
 CFG_SECRET_KEY=fake_secret_key_for_dev_environment
