--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,22 @@
 version: '2'
 
+
+volumes:
+  blog_app_data: {}
+  blog_postgres_data: {}
+
+
+networks:
+  backend: {}
+
+
 services:
   # The blog application
   blog_app:
     build: .
     restart: always
+    networks:
+      - backend
     env_file:
       # You need to have this file to be able to work with docker
       - ~/.docker/secrets/blog.prod.env
@@ -22,6 +34,8 @@ services:
   blog_nginx:
     build: ./nginx
     restart: always
+    networks:
+      - backend
     ports:
       - "80:80"
     volumes:
@@ -34,10 +48,7 @@ services:
   blog_postgres:
     image: postgres:9.5
     restart: always
+    networks:
+      - backend
     volumes:
       - "blog_postgres_data:/var/lib/postgresql/data"
-
-
-volumes:
-  blog_app_data: {}
-  blog_postgres_data: {}
