--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,33 @@ install:
   - pip install flake8
 
 script:
+  # Code style
   - flake8
+
+  # Check migrations and run tests
   - python src/manage.py check
   - python src/manage.py makemigrations --check
   - python src/manage.py test
+
+  # Build a docker image
+  - docker build -t m1kola/mikolaby .
+  - docker images m1kola/mikolaby
+
+  # Push an image into the public docker registry
+  # Should only work on the master branch.
+  #
+  # Note that $TRAVIS_BRANCH for builds triggered by a pull request will have
+  # the name of the branch targeted by the pull request,
+  # so we also need to check $TRAVIS_PULL_REQUEST to prevent pushing
+  # on pull requests targeted to the master branch.
+  # See https://docs.travis-ci.com/user/environment-variables/#Default-Environment-Variables
+  #
+  # Another important note is thar we should run this as part of the "script"
+  # stage, because later stages (such as "after_script" and "after_success")
+  # do not affect the build result and we want to receive notifications,
+  # in case of failed attempts to push to the docker registry.
+  - >
+    if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+      docker login -u "$DOCKER_HUB_USERNAME" -p "$DOCKER_HUB_PASSWORD";
+      docker push m1kola/mikolaby;
+    fi;
