--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,8 @@
 language: node_js
+os: linux
 
-os:
-  - linux
-  - osx
+# Use container-based infrastructure
+dist: trusty
+sudo: required
 
-node_js:
-  - "node"
-  - "lts/*"
-  - "7"
-  - "8"
-
-script:
-  - npm install
-  - npm run lint
+script: npm run lint
