--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "gatsby": "^1.9.250",
     "gatsby-link": "^1.6.39",
+    "gatsby-plugin-canonical-urls": "^1.0.18",
     "gatsby-plugin-feed": "^1.3.20",
     "gatsby-plugin-google-tagmanager": "^1.0.19",
     "gatsby-plugin-offline": "^1.0.15",
